--- a/v1/CV-en.tex
+++ b/v1/CV-en.tex
@@ -51,7 +51,7 @@
 
 \section{Education}
  % Los argumentos del 3 al 6 pueden permanecer vacios
- \cventry{2011--2016}{PhD. in Civil Engineering, area of Continuum Mechanics and Structural Theory}{School of Civil Engineering}{University of A Coru\~na}{}{Doctoral thesis: \textit{Crashworthiness analysis and design optimization of hybrid impact energy absorbers} Research stay at SIMLab (NTNU) during six months, granted by Fundaci\'on Barri\'e. International mention and \emph{cum laude} award.} 
+ \cventry{2011--2016}{PhD. in Civil Engineering, area of Continuum Mechanics and Structural Theory}{School of Civil Engineering}{University of A Coru\~na}{}{Doctoral thesis: \textit{Crashworthiness analysis and design optimization of hybrid impact energy absorbers} Research stay at SIMLab (NTNU) during six months, granted by Fundaci\'on Barri\'e. Extraordinary PhD award, international mention and \emph{cum laude} award.} 
 \cventry{2005--2010}{MEng. in Civil Engineering (Ingeniero de Caminos, Canales y Puertos)}{School of Civil Engineering}{University of A Coru\~na}{}{Number 11 of 95 in class. Erasmus exchange program at Syddansk Universitet (Odense, Denmark).}
 \cventry{2005}{Professional degree in Music}{Conservatory of Santiago de Compostela}{}{}{Specialization in piano and music analysis.}
 
@@ -64,16 +64,17 @@
 \cventry{Summer 2009}{Internship}{Port Authority of Vilagarc\'ia de Arousa (Puertos del Estado)}{}{}{}
 
 \section{Teaching experience}
-\cventry{2015-Present}{Teacher of 'Advanced structural analysis' in the Master in Structural and Material Aerospace Engineering}{School of Civil Engineering, UDC}{}{}{}
+\cventry{2015-Present}{Teacher of ``Advanced structural analysis'' in the Master in Structural and Material Aerospace Engineering}{School of Civil Engineering, UDC}{}{}{}
 \cventry{2013-2014}{Assistant in the practical training of the subject 'Bridges 1'}{School of Civil Engineering, UDC}{}{}{}
 
 \section{Languages}
 \cvitemwithcomment{Spanish}{Native}{}
 \cvitemwithcomment{Galician}{Native}{}
 \cvitemwithcomment{English}{Full professional proficiency, level C1}{Certificate in Advanced English, Cambridge University. 2012.}
+\cvitemwithcomment{Norwegian}{Basic professional proficiency, level B2}{Official B2 certificate (Bokm\r{a}l)}
 \cvitemwithcomment{French}{Basic professional proficiency, level B1}{}
 \cvitemwithcomment{Portuguese}{Basic professional proficiency}{}
-\cvitemwithcomment{Norwegian}{Basic professional proficiency, level B1}{Official B1 certificate (Bokm\r{a}l)}
+
 
 \section{Computation skills}
 \cvitem{Structural analysis}{Structural analysis with Abaqus Standard and Explicit. Experience in explicit crash simulations, including plasticity and failure models for metals and composites, contacts, joints, etc. Experience with Python scripts for pre and post-processing. Other software: Ansys, SAP2000, Cosmos/M.}
@@ -128,7 +129,7 @@
 \cvlistitem{Research stay from 1/10/2014 to 1/4/2015 (six months) at the Structural Impact Laboratory (NTNU, Norway) supervised by Prof. Magnus Langseth and Dr. David Morin.}
 
 \section{Scientific advisory}
-\cvlistitem{Reviewer in JCR journals \emph{International Journal of Mechanical Sciences}, \emph{Materials and Design}, \emph{Journal of Reinforced Plastics and Composites}, \emph{Engineering Optimization}, \emph{Computers and Structures} and \emph{Composites Part B}.}
+\cvlistitem{Reviewer in JCR journals \emph{International Journal of Mechanical Sciences}, \emph{Materials and Design}, \emph{Journal of Reinforced Plastics and Composites}, \emph{Engineering Optimization}, \emph{Computers and Structures}, \emph{Composites Part B} and \emph{Thin-Walled Structures}.}
 
 \end{document}
 
