--- a/v1/publications_en.bib
+++ b/v1/publications_en.bib
@@ -3,14 +3,15 @@
         year={},
         title={},
         journal={},
-
 }
+@article{COSTAS2017205,
+title = "{Static crushing of aluminium tubes filled with PET foam and a GFRP skeleton. Numerical modelling and multiobjective optimization}",
+journal = "International Journal of Mechanical Sciences",
+volume = "131-132",
+pages = "205 - 217",
+year = "2017",
+author = "M. Costas and D. Morin and M. Langseth and J. Díaz and L. Romera",
 
-@ARTICLE{costas2017axial,
-  author = {Costas, M. and Morin, D. and Langseth, M. and D{\'\i}az, J. and Romera, L.},
-  title = {Static crushing of aluminium extrusions filled with {PET} foam and {GFRP}. {Numerical} modelling and multiobjective optimization. {{\textbf{Submitted after peer review, publication inminent}}}},
-  journal = {International Journal of Mechanical Sciences},
-  year = {2017},
 }
 
 @ARTICLE{costas2016axial,
