--- a/v1/publications_en.bib
+++ b/v1/publications_en.bib
@@ -4,6 +4,12 @@
         title={},
         journal={},
 }
+@article{COSTAS2018,
+title = "A through-thickness damage regularisation scheme for shell elements subjected to severe bending and membrane deformations",
+journal = "Journal of the Mechanics and Physics of Solids",
+year = "2018",
+author = "M. Costas and D. Morin and O.S. Hopperstad and T. Børvik and M. Langseth",
+}
 @article{COSTAS2017205,
 title = "{Static crushing of aluminium tubes filled with PET foam and a GFRP skeleton. Numerical modelling and multiobjective optimization}",
 journal = "International Journal of Mechanical Sciences",
@@ -84,7 +90,20 @@ source={Scopus},
         journal={},
 
 }
-
+@conference{dyna1,
+  Author = {Holmen, J.K. and Johnsen, J. and Costas, M. and Morin, D. and Berstad, T. and Børvik, T. and Hopperstad, O.S. and Langseth, M.},
+  Booktitle = {Dynamore Nordic Users’ Conference 2018, Gothenburg (Sweden)},
+  Document_Type = {Conference Paper},
+  Title = {Applications of *{MAT}\textunderscore 258: A through-thickness regularization model for shells},
+  Year = {2018},
+  }
+@conference{dyna2,
+  Author = {Morin, D. and Holmen, J.K. and Johnsen, J. and Costas, M. and Berstad, T. and Børvik, T. and Hopperstad, O.S. and Langseth, M.},
+  Booktitle = {Dynamore Nordic Users’ Conference 2018, Gothenburg (Sweden)},
+  Document_Type = {Conference Paper},
+  Title = {Theoretical aspects of *{MAT}\textunderscore 258: A through-thickness regularization model for shells},
+  Year = {2018},
+  }
 @conference{Costas_portugal,
   Author = {D\'iaz,J. and Romera,L. E. and Costas, M. and Paz, J.},
   Booktitle = {ICCS19 - 19th International Conference on Composite Structures, Porto (Portugal)},
@@ -187,21 +206,3 @@ source={Scopus},
   Title = {Influence of Welded Joints on the Crashworthiness Response of Hybrid Structural Elements},
   Year = {2013}
   }
-
-
-@article{titulo3,
-        author={\textbf{Master Thesis in Structural Engineering (Syddansk Universitet, Denmark)}},
-        year={},
-        title={},
-        journal={},
-
-}
-
-@MastersThesis{PFC,
-    author     =     {Costas, M. and G\'omez, D. and Vilanova, G. and {coordinators Dr. Carsten Munk Plum and M.Sc. Lys Rhilinger}},
-    title     =     {\emph{Load Bearing Capacity of Circular Hollow Sections Subjected to Combined Bending and Axial Compression}},
-    school     =     {Tekniske Fakultet, Syddansk Universitet - Denmark},
-    year     =     {2010},
-    }
-
-
