--- a/v1/CV-en.tex
+++ b/v1/CV-en.tex
@@ -26,13 +26,14 @@
 
 % datos personales
 \firstname{Miguel}
-\familyname{Costas Pi\~{n}\'o}
-\title{Curriculum Vitae, updated \today}
+%\familyname{Costas Pi\~{n}\'o}
+\familyname{Costas}
+\title{Engineering Curriculum Vitae, updated \today}
 \address{Presteg\r{a}rdsvegen 5}{7051 - Trondheim, Norway} % dato opcional, elimine la linea si no desea el dato
 \mobile{(+47)~469~67~251\\(+34)~660~784~672\\}
 \email{miguel.costas@ntnu.no}                                 % dato opcional, elimine la linea si no desea el dato
 \extrainfo{Birth date: 11.28.1987}                    % dato opcional, elimine la linea si no desea el dato
-\photo[64pt][0pt]{foto_yo}                          % '64pt' es la altura a la que la imagen debe ser ajustada, 0.4pt es grosor del marco que lo contiene (eliga 0pt para eliminar el marco) y 'picture' es el nombre del archivo; dato opcional, elimine la linea si no desea el dato
+\photo[64pt][0pt]{foto_yo_redondo}                          % '64pt' es la altura a la que la imagen debe ser ajustada, 0.4pt es grosor del marco que lo contiene (eliga 0pt para eliminar el marco) y 'picture' es el nombre del archivo; dato opcional, elimine la linea si no desea el dato
 
 % para mostrar etiquetas numericas en la bibliografia (por omision no se muestran etiquetas), solo es util si desea incluir citas en en CV
 %\makeatletter
@@ -64,22 +65,22 @@
 \cventry{Summer 2009}{Internship}{Port Authority of Vilagarc\'ia de Arousa (Puertos del Estado)}{}{}{}
 
 \section{Teaching experience}
-\cventry{2015-Present}{Teacher of ``Advanced structural analysis'' in the Master in Structural and Material Aerospace Engineering}{School of Civil Engineering, UDC}{}{}{}
+\cventry{2015-2018}{Teacher of ``Advanced structural analysis'' in the Master in Structural and Material Aerospace Engineering}{School of Civil Engineering, UDC}{}{}{}
 \cventry{2013-2014}{Assistant in the practical training of the subject 'Bridges 1'}{School of Civil Engineering, UDC}{}{}{}
 
 \section{Languages}
 \cvitemwithcomment{Spanish}{Native}{}
 \cvitemwithcomment{Galician}{Native}{}
 \cvitemwithcomment{English}{Full professional proficiency, level C1}{Certificate in Advanced English, Cambridge University. 2012.}
-\cvitemwithcomment{Norwegian}{Basic professional proficiency, level B2}{Official B2 certificate (Bokm\r{a}l)}
+\cvitemwithcomment{Norwegian}{Intermediate professional proficiency, level B2-C1}{Currently studying at NTNU.}
 \cvitemwithcomment{French}{Basic professional proficiency, level B1}{}
 \cvitemwithcomment{Portuguese}{Basic professional proficiency}{}
 
 
 \section{Computation skills}
-\cvitem{Structural analysis}{Structural analysis with Abaqus Standard and Explicit. Experience in explicit crash simulations, including plasticity and failure models for metals and composites, contacts, joints, etc. Experience with Python scripts for pre and post-processing. Other software: Ansys, SAP2000, Cosmos/M.}
-\cvitem{Optimization packages}{Experience in structural optimization with different optimization libraries such as DOT, SCOLIB, CONMIN, OPT++ and JEGA. Surrogate modeling using the Surfpack package. Experience with DAKOTA optimization framework.}
-\cvitem{CAD}{Autocad}
+\cvitem{Structural analysis}{Structural analysis with Abaqus Standard and Explicit. Experience in explicit crash simulations, including plasticity and failure models for metals and composites, contacts, joints, etc. Other software: LS-DYNA, Ansys, SAP2000, Cosmos/M.}
+\cvitem{Optimization packages}{Experience in structural optimization with different optimization libraries. Experience with DAKOTA and LS-OPT optimization frameworks.}
+\cvitem{CAD}{Autocad, Solidworks.}
 \cvitem{Programming}{Python, Fortran, Bash, \LaTeX.}
 
 
@@ -109,7 +110,6 @@
 
 \section{RD fundraising}
 \cvlistitem{[National project] DPI2016-76934-R. OPTISAFE. Probabilistic optimization of intact and damaged aeronautical structures under dynamic and impact loading. Spanish Ministry of Economy and Competitiveness. Year 2016. Budget: 111600 \texteuro.}
-\vspace{3mm}
 
 \nocite{*}
 \bibliographystyle{unsrt}
@@ -129,7 +129,7 @@
 \cvlistitem{Research stay from 1/10/2014 to 1/4/2015 (six months) at the Structural Impact Laboratory (NTNU, Norway) supervised by Prof. Magnus Langseth and Dr. David Morin.}
 
 \section{Scientific advisory}
-\cvlistitem{Reviewer in JCR journals \emph{International Journal of Mechanical Sciences}, \emph{Materials and Design}, \emph{Journal of Reinforced Plastics and Composites}, \emph{Engineering Optimization}, \emph{Computers and Structures}, \emph{Composites Part B} and \emph{Thin-Walled Structures}.}
+\cvlistitem{Reviewer in JCR journals \emph{International Journal of Mechanical Sciences}, \emph{Materials and Design}, \emph{Journal of Reinforced Plastics and Composites}, \emph{Engineering Optimization}, \emph{Computers and Structures}, \emph{Composites Part B}, \emph{Thin-Walled Structures}, and \emph{International Journal of Impact Engineering}.}
 
 \end{document}
 
