--- a/v1/publications_en.bib
+++ b/v1/publications_en.bib
@@ -4,6 +4,24 @@
         title={},
         journal={},
 }
+
+@article{tim,
+title = "{On the ballistic perforation resistance of additive manufactured {AlSi10Mg} aluminium plates [under review]}
+",
+journal = "International Journal of Impact Engineering",
+year = "2019",
+author = "M. Kristoffersen and M. Costas and T. Koenis and V. Brøtan and C. Paulsen and T. Børvik",
+
+}
+
+@article{3dprinted,
+title = "{Testing and simulation of additively manufactured {AlSi10Mg} boxes under quasi-static lateral compression [under review]
+}",
+journal = "Thin-Walled Structures",
+year = "2019",
+author = "M. Costas and D. Morin and M. de Lucio and M. Langseth",
+
+}
 @article{COSTAS2018,
 title = "A through-thickness damage regularisation scheme for shell elements subjected to severe bending and membrane deformations",
 journal = "Journal of the Mechanics and Physics of Solids",
@@ -17,8 +35,9 @@ volume = "131-132",
 pages = "205 - 217",
 year = "2017",
 author = "M. Costas and D. Morin and M. Langseth and J. Díaz and L. Romera",
-
 }
+
+
 
 @ARTICLE{costas2016axial,
   author = {Costas, M. and Morin, D. and Langseth, M. and Romera, L. and D{\'\i}az,
