--- a/v1/publications_en.bib
+++ b/v1/publications_en.bib
@@ -4,10 +4,49 @@
         title={},
         journal={},
 }
-@article{COSTAS2018,
+
+@article{KRISTOFFERSEN2019103476,
+title = "On the ballistic perforation resistance of additive manufactured {AlSi10Mg} aluminium plates",
+journal = "International Journal of Impact Engineering",
+pages = "103476",
+year = "2019",
+issn = "0734-743X",
+author = "M. Kristoffersen and M. Costas and T. Koenis and V. Brøtan and C.O. Paulsen and T. Børvik",
+}
+
+@article{3dprinted,
+title = "{Testing and simulation of additively manufactured {AlSi10Mg} boxes under quasi-static lateral compression [under review]
+}",
+journal = "European Journal of Mechanics / Solids",
+year = "2019",
+author = "M. Costas and D. Morin and M. de Lucio and M. Langseth",
+
+}
+
+@article{andrea,
+title = "{Pure {mode-I} fracture toughness determination in rocks using a pseudo-compact tension {(pCT)} test approach [under review]
+}",
+journal = "Rock Mechanics and Rock Engineering",
+year = "2019",
+author = "A. Muñoz-Ibáñez and J. Delgado-Martín and M. Costas and J. Rabuñal-Dopico and J. Alvarellos-Iglesias and J. Canal-Vila",
+
+}
+
+@article{COSTAS2019103794,
+title = "Corrigendum to “{A through-thickness damage regularisation scheme for shell elements subjected to severe bending and membrane deformations” [Journal of the Mechanics and Physics of Solids 123 (2019) 190–206]}",
+journal = "Journal of the Mechanics and Physics of Solids",
+pages = "103794",
+year = "2019",
+issn = "0022-5096",
+author = "M. Costas and D. Morin and O.S. Hopperstad and T. Børvik and M. Langseth"
+}
+
+@article{COSTAS2019,
 title = "A through-thickness damage regularisation scheme for shell elements subjected to severe bending and membrane deformations",
 journal = "Journal of the Mechanics and Physics of Solids",
-year = "2018",
+volume = "123",
+pages = "190 - 206",
+year = "2019",
 author = "M. Costas and D. Morin and O.S. Hopperstad and T. Børvik and M. Langseth",
 }
 @article{COSTAS2017205,
@@ -17,8 +56,9 @@ volume = "131-132",
 pages = "205 - 217",
 year = "2017",
 author = "M. Costas and D. Morin and M. Langseth and J. Díaz and L. Romera",
-
 }
+
+
 
 @ARTICLE{costas2016axial,
   author = {Costas, M. and Morin, D. and Langseth, M. and Romera, L. and D{\'\i}az,
@@ -81,7 +121,25 @@ source={Scopus},
         pages={166-181},
 }
 
+@article{libros,
+        author={\textbf{Book chapters}},
+        year={},
+        title={},
+        journal={},
+}
 
+@Inproceedings{Díaz2019,
+author="D{\'i}az, Jacobo
+and Costas, Miguel",
+editor="Altenbach, Holm
+and {\"O}chsner, Andreas",
+title="Crashworthiness",
+bookTitle="Encyclopedia of Continuum Mechanics",
+year="2019",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+isbn="978-3-662-53605-6",
+}
 
 @article{titulo2,
         author={\textbf{International conferences}},
@@ -90,6 +148,48 @@ source={Scopus},
         journal={},
 
 }
+@conference{esiam1,
+  Author = {Costas, M. and Morin, D. and Langseth, M.},
+  Booktitle = {European Conference on the Structural Integrity of Additively Manufactured Materials, Trondheim (Norway)},
+  Document_Type = {Conference Paper},
+  Title = {An experimental and numerical study on the lateral crushing of additively manufactured {AlSi10Mg} boxes},
+  Year = {2019},
+  }
+@conference{esiam2,
+  Author = {Kristoffersen, M. and Costas, M. and Oen Paulsen, C. and Koenis, T. and Brøtan, V. and Børvik, T.},
+  Booktitle = {European Conference on the Structural Integrity of Additively Manufactured Materials, Trondheim (Norway)},
+  Document_Type = {Conference Paper},
+  Title = {Experimental and numerical investigations of additively manufactured {AlSi10Mg} plates subjected to ballistic perforation},
+  Year = {2019},
+  }
+@conference{madrid,
+  Author = {Costas, M. and Morin, D. and Langseth, M.},
+  Booktitle = {ASIDIC2019, Aerospace Structural Impact Dynamics International Conference, Madrid (Spain)},
+  Document_Type = {Conference Paper},
+  Title = {Modelling and Simulation of Impact in Stiffened Aluminium Panels Using Damage Regularisation},
+  Year = {2019},
+  }
+@conference{koblenz,
+  Author = {Costas, M. and Morin, D. and Langseth, M.},
+  Booktitle = {12th European LS-DYNA Conference, Koblenz (Germany)},
+  Document_Type = {Conference Paper},
+  Title = {Modelling of Steel-Aluminium Components using Structural Adhesive and Self-Piercing Rivets},
+  Year = {2019},
+  }
+@conference{koblenz2,
+  Author = {Morin, D. and Reil, M. and Berstad, T. and Costas, M. and Langseth, M.},
+  Booktitle = {12th European LS-DYNA Conference, Koblenz (Germany)},
+  Document_Type = {Conference Paper},
+  Title = {Multi-Scale Numerical Simulations of Structural Joints with Flow-Drill Screws using a Virtual Material Calibration},
+  Year = {2019},
+  }
+@conference{koblenz3,
+  Author = {Morin, D. and Berstad, T. and Costas, M. and Hopperstad, O.S. and Langseth, M.},
+  Booktitle = {12th European LS-DYNA Conference, Koblenz (Germany)},
+  Document_Type = {Conference Paper},
+  Title = {*{MAT}\textunderscore 258: A Through-Thickness Regularization Scheme for Shell Element Analyses – Application to Aluminium Components},
+  Year = {2019},
+  }
 @conference{dyna1,
   Author = {Holmen, J.K. and Johnsen, J. and Costas, M. and Morin, D. and Berstad, T. and Børvik, T. and Hopperstad, O.S. and Langseth, M.},
   Booktitle = {Dynamore Nordic Users’ Conference 2018, Gothenburg (Sweden)},
