--- a/v1/CV-en.tex
+++ b/v1/CV-en.tex
@@ -28,8 +28,8 @@
 \firstname{Miguel}
 %\familyname{Costas Pi\~{n}\'o}
 \familyname{Costas}
-\title{Engineering Curriculum Vitae, updated \today}
-\address{Presteg\r{a}rdsvegen 5}{7051 - Trondheim, Norway} % dato opcional, elimine la linea si no desea el dato
+\title{Curriculum Vitae, updated \today}
+\address{Trondheim, Norway} % dato opcional, elimine la linea si no desea el dato
 \mobile{(+47)~469~67~251\\(+34)~660~784~672\\}
 \email{miguel.costas@ntnu.no}                                 % dato opcional, elimine la linea si no desea el dato
 \extrainfo{Birth date: 11.28.1987}                    % dato opcional, elimine la linea si no desea el dato
@@ -52,69 +52,102 @@
 
 \section{Education}
  % Los argumentos del 3 al 6 pueden permanecer vacios
- \cventry{2011--2016}{PhD. in Civil Engineering, area of Continuum Mechanics and Structural Theory}{School of Civil Engineering}{University of A Coru\~na}{}{Doctoral thesis: \textit{Crashworthiness analysis and design optimization of hybrid impact energy absorbers} Research stay at SIMLab (NTNU) during six months, granted by Fundaci\'on Barri\'e. Extraordinary PhD award, international mention and \emph{cum laude} award.} 
+ \cventry{2011--2016}{PhD. in Civil Engineering, area of Continuum Mechanics and Structural Theory}{School of Civil Engineering}{University of A Coru\~na}{}{Doctoral thesis: \textit{Crashworthiness analysis and design optimization of hybrid impact energy absorbers} Research stay at SIMLab (NTNU) during six months, granted by Fundaci\'on Barri\'e.} 
 \cventry{2005--2010}{MEng. in Civil Engineering (Ingeniero de Caminos, Canales y Puertos)}{School of Civil Engineering}{University of A Coru\~na}{}{Number 11 of 95 in class. Erasmus exchange program at Syddansk Universitet (Odense, Denmark).}
-\cventry{2005}{Professional degree in Music}{Conservatory of Santiago de Compostela}{}{}{Specialization in piano and music analysis.}
+\cventry{2005}{Professional degree in Music}{Conservatory of Santiago de Compostela}{}{}{Specialization in piano and musical analysis.}
 
+\section{Awards}
+ % Los argumentos del 3 al 6 pueden permanecer vacios
+\cventry{2016}{Extraordinary PhD. award}{University of A Coru\~na}{}{}{Yearly award to the best PhD. thesis in the field of Engineering at the University of A Coru\~na.} 
+\cventry{2016}{International PhD. mention}{University of A Coru\~na}{}{}{Awarded to PhD. projects which include a successful international collaboration and a research stay.} 
+\cventry{2016}{\emph{Cum laude} PhD.}{University of A Coru\~na}{}{}{Awarded to PhD. theses with outstanding contributions, agreed by the committee by secret individual votes.} 
 
 \section{Work history}
 
-\cventry{2017--Present}{Postdoctoral researcher}{Centre for Advanced Structural Analysis (CASA), NTNU (Trondheim, Norway)}{}{}{}
+\cventry{2019--Present}{Researcher}{Centre for Advanced Structural Analysis (CASA), NTNU (Trondheim, Norway)}{}{}{}
+\cventry{2017--2019}{Postdoctoral researcher}{Centre for Advanced Structural Analysis (CASA), NTNU (Trondheim, Norway)}{}{}{}
 \cventry{2016}{Postdoctoral researcher}{Structural Mechanics group, University of A Coru\~na}{}{}{}
-\cventry{2011--2015}{RD engineer and PhD candidate}{Structural Mechanics group, University of A Coru\~na}{}{}{(Please find a list of RD projects on the upcoming pages).}
+\cventry{2011--2015}{RD engineer and PhD candidate}{Structural Mechanics group, University of A Coru\~na}{}{}{}
 \cventry{Summer 2009}{Internship}{Port Authority of Vilagarc\'ia de Arousa (Puertos del Estado)}{}{}{}
 
 \section{Teaching experience}
-\cventry{2015-2018}{Teacher of ``Advanced structural analysis'' in the Master in Structural and Material Aerospace Engineering}{School of Civil Engineering, UDC}{}{}{}
-\cventry{2013-2014}{Assistant in the practical training of the subject 'Bridges 1'}{School of Civil Engineering, UDC}{}{}{}
+\cventry{2018--Present}{Teacher and coordinator of ``Materials Mechanics'' (TKT4135), master programmes}{NTNU}{}{}{}
+\cventry{2015--2018}{Teacher of ``Advanced structural analysis'' in the Master in Structural and Material Aerospace Engineering}{School of Civil Engineering, UDC}{}{}{}
+\cventry{2013--2014}{Assistant in the practical training of the subject ``Bridges 1''}{School of Civil Engineering, UDC}{}{}{}
+
+\section{Supervision of PhD. theses}
+\cventry{2019-2023}{``Behaviour and modelling of multi-layered joints"}{PhD. candidate Victor Andr\'e, NTNU}{}{}{}
 
 \section{Languages}
 \cvitemwithcomment{Spanish}{Native}{}
 \cvitemwithcomment{Galician}{Native}{}
-\cvitemwithcomment{English}{Full professional proficiency, level C1}{Certificate in Advanced English, Cambridge University. 2012.}
-\cvitemwithcomment{Norwegian}{Intermediate professional proficiency, level B2-C1}{Currently studying at NTNU.}
+\cvitemwithcomment{English}{Full professional proficiency}{Certificate in Advanced English, Cambridge University. 2012.}
+\cvitemwithcomment{Norwegian}{Intermediate professional proficiency, level B2}{}
 \cvitemwithcomment{French}{Basic professional proficiency, level B1}{}
 \cvitemwithcomment{Portuguese}{Basic professional proficiency}{}
 
-
+\pagebreak
 \section{Computation skills}
-\cvitem{Structural analysis}{Structural analysis with Abaqus Standard and Explicit. Experience in explicit crash simulations, including plasticity and failure models for metals and composites, contacts, joints, etc. Other software: LS-DYNA, Ansys, SAP2000, Cosmos/M.}
+\cvitem{FEM}{Structural analysis with Abaqus Standard and Explicit including user material subroutines, LS-DYNA, Ansys, SAP2000, Cosmos/M.}
 \cvitem{Optimization packages}{Experience in structural optimization with different optimization libraries. Experience with DAKOTA and LS-OPT optimization frameworks.}
 \cvitem{CAD}{Autocad, Solidworks.}
 \cvitem{Programming}{Python, Fortran, Bash, \LaTeX.}
-
-
-\section{Other information}
-\cvlistitem{Driving license. Car owner.}
-\cvlistitem{Piano teacher and active professional concert pianist.}
 
 \renewcommand{\listitemsymbol}{-~}            % para cambiar el simbolo para las listas
 
 
 % Las publicaciones tomadas de un archivo de BibTeX sin usar multibib\renewcommand*{\bibliographyitemlabel}{\@biblabel{\arabic{enumiv}}}
 
-\section{Patents}
+\section{Projects and activities in collaboration with industry}
+\cvitem{UDC}{Collaborations from 2011 to 2016:}
+\cvlistitem{[\textbf{Airbus}, European project] FP7-AAT-2007-RTD-1. MAAXIMUS: More affordable Aircraft Structure through Extended, Integrated and Mature Numerical Sizing, UE, 03/2008-03/2013. Years 2011-2015. Budget: 370000 \texteuro.}
+\vspace{2mm}
+\cvlistitem{[\textbf{Acciona Energy}, national Spanish project] UNCL13-1E-2123. Boundary layer wind tunnel for civil and aeronautical engineering applications. Spanish Ministry of Economy and Competitiveness. Year 2014. Budget: 325000 \texteuro.}
+\vspace{2mm}
+\cvlistitem{[\textbf{Acciona Construction}, national Spanish project] DURAPORT. New technologies for the construction of durable port infrastructure. CDTI, program FEDER-INTERCONNECTA, Spanish Ministry of Economy and Competitiveness, ref. 407. Years 2011-2012. Budget: 40000 \texteuro.}
+\vspace{2mm}
+\cvlistitem{[\textbf{CTAG}, regional Galician project] 09DPI-011118PR INCITE 2009. Optimum design of automobile structures and components with metallic and composite materials. Regional Counseling of Economy and Industry. Years 2009-2012. Budget: 45000 \texteuro.}
+\vspace{2mm}
+\cvlistitem{[\textbf{CTAG}, regional Galician project] 10DPI025CT. Hybrid-Body: structural optimization of a hybrid sistem for frontal impact energy absorption with experimental and numerical validation. Regional Counseling of Economy and Industry. Years 2010-2012. Budget: 46000 \texteuro.}
+\vspace{2mm}
+\cvlistitem{[\textbf{Puentes y calzadas}] Seismic design in linear and nonlinear regimes of the new bridge over the river Chiche, in Ecuador. Ref. 443. Year 2013. Budget: 44504.77 \texteuro.}
+\vspace{2mm}
+\cvlistitem{[\textbf{Airbus}] Optimization study of rear fuselage. Year 2015. Budget: 25561.26 \texteuro.}
+\vspace{2mm}
+\cvlistitem{[\textbf{Airbus}] Junction modeling of nonlinear frequency response of assembled structures. Extension of 2012 activities. Year 2015. Budget: 24200 \texteuro.}
+\vspace{4mm}
+\cvitem{NTNU}{Collaborations from 2017 to present:}
+\cvlistitem{[\textbf{Hydro Extruded Solutions}] Study of fibrous and recrystallised AA6005-T6 for the development of a through-thickness ductile damage regularisation model for shells. Years 2017-2018.}
+\vspace{2mm}
+\cvlistitem{[\textbf{Toyota Motor Europe}] Effect of pilot holes on the mechanical behaviour of flow-drill screw joints. Years 2017-2019.}
+\vspace{2mm}
+\cvlistitem{[\textbf{Renault}] Flow drill screw joints combining steel and cast aluminium. Years 2018-2019.}
+\vspace{2mm}
+\cvlistitem{[\textbf{Toyota Motor Europe}] Study of hybrid joints with adhesive and flow drill screws. Years 2018-2020.}
+\vspace{2mm}
+\cvlistitem{[\textbf{Hydro Extruded Solutions}] Study of friction stir welds in AA6082-T6 extruded aluminium panels. Years 2019-2020.}
+\vspace{2mm}
+\cvlistitem{[\textbf{Toyota Motor Europe}] Study of the extrusion length produced during the assembly of flow-drill screws. Years 2019-2020.}
+\vspace{2mm}
+\cvlistitem{[\textbf{Hydro Extruded Solutions}] Study of a new high strength aluminium alloy and development and implementation of an anisotropic through-thickness ductile damage regularisation model for shells. Years 2019-2020.}
+\vspace{2mm}
+\cvlistitem{[\textbf{MX3D} and \textbf{Multiconsult}] Study of the material and structural properties of square hollow beams fabricated by wire arc additive manufacturing. Years 2020-2021.}
+\vspace{2mm}
+\cvlistitem{[\textbf{Hydro Extruded Solutions}, \textbf{Toyota Motor Europe}, \textbf{Audi}, \textbf{BMW}, \textbf{Honda}, \textbf{Airbus}, \textbf{Renault}, \textbf{Airbus}] Calibrations, workshops, seminars and stays related to the industrial implementation of the through-thickness damage regularisation model.}
+
+\section{Patents in collaboration with industry}
 \cvlistitem{National Spanish patent no. ES 2-386-269-B1: Hybrid metal-composite system for crash energy absorption. Authors: Alberto Tielas, Isabel \'Alvarez, Raquel Ledo (Centro Tecnol\'oxico da Automoci\'on de Galicia, CTAG); Miguel Costas, Luis Esteban Romera (University of A Coru\~na, UDC). Granted on the 11th of July 2013.}
 
-\section{Participation in RD projects}
-\cvlistitem{[European project] FP7-AAT-2007-RTD-1. MAAXIMUS: More affordable Aircraft Structure through Extended, Integrated and Mature Numerical Sizing, UE, 03/2008-03/2013. Years 2011-2015. Budget: 370000 \texteuro.}
-\cvlistitem{[National project] UNCL13-1E-2123. Boundary layer wind tunnel for civil and aeronautical engineering applications. Spanish Ministry of Economy and Competitiveness. Year 2014. Budget: 325000 \texteuro.}
-\cvlistitem{[National project] DURAPORT. New technologies for the construction of durable port infrastructure. CDTI, program FEDER-INTERCONNECTA, Spanish Ministry of Economy and Competitiveness, ref. 407. Years 2011-2012. Budget: 40000 \texteuro.}
+\section{Other RD projects}
 \cvlistitem{[National project] DPI 2013-41893-R. OPTOPAER. Probabilistic topologic and topometric optimization of aeronautical structures in linear and nonlinear regimes. Spanish Ministry of Economy and Competitiveness. Years 2014-2016. Budget: 53240 \texteuro.}
-\cvlistitem{[Regional project] 09DPI-011118PR INCITE 2009. Optimum design of automobile structures and components with metallic and composite materials. Regional Counseling of Economy and Industry. Years 2009-2012. Budget: 45000 \texteuro.}
-\cvlistitem{[Regional project] 10DPI025CT. Hybrid-Body: structural optimization of a hybrid sistem for frontal impact energy absorption with experimental and numerical validation. Regional Counseling of Economy and Industry. Years 2010-2012. Budget: 46000 \texteuro.}
 \cvlistitem{[Regional project] GRC2013-056. Group of Competitive Reference. Regional Counseling of Culture, Education and Universities. Years 2013-2016. Budget: 259000 \texteuro.}
-\cvlistitem{[RD project with industrial partner] With Puentes y Calzadas: Seismic design in linear and nonlinear regimes of the new bridge over the river Chiche, in Ecuador. Ref. 443. Year 2013. Budget: 44504.77 \texteuro.}
-\cvlistitem{[RD project with industrial partner] With AIRBUS: Optimization study of rear fuselage. Year 2015. Budget: 25561.26 \texteuro.}
-\cvlistitem{[RD project with industrial partner] With AIRBUS: Junction modeling of nonlinear frequency response of assembled structures. Extension of 2012 activities. Year 2015. Budget: 24200 \texteuro.}
 
-\section{RD fundraising}
+\section{RD fundraising -- awarded projects}
 \cvlistitem{[National project] DPI2016-76934-R. OPTISAFE. Probabilistic optimization of intact and damaged aeronautical structures under dynamic and impact loading. Spanish Ministry of Economy and Competitiveness. Year 2016. Budget: 111600 \texteuro.}
 
 \nocite{*}
 \bibliographystyle{unsrt}
 \bibliography{publications_en}                    % 'publications' es el nombre del archivo BibTeX
-
 % Las publicaciones tomadas de un archivo BibTeX usando el paquete multibib
 %\section{Publicaciones}
 %\nocitebook{book1,book2}
@@ -129,8 +162,13 @@
 \cvlistitem{Research stay from 1/10/2014 to 1/4/2015 (six months) at the Structural Impact Laboratory (NTNU, Norway) supervised by Prof. Magnus Langseth and Dr. David Morin.}
 
 \section{Scientific advisory}
-\cvlistitem{Reviewer in JCR journals \emph{International Journal of Mechanical Sciences}, \emph{Materials and Design}, \emph{Journal of Reinforced Plastics and Composites}, \emph{Engineering Optimization}, \emph{Computers and Structures}, \emph{Composites Part B}, \emph{Thin-Walled Structures}, and \emph{International Journal of Impact Engineering}.}
+\cvlistitem{Reviewer in JCR journals \emph{International Journal of Mechanical Sciences}, \emph{Materials and Design}, \emph{Journal of Reinforced Plastics and Composites}, \emph{Engineering Optimization}, \emph{Computers and Structures}, \emph{Composites Part B}, \emph{Thin-Walled Structures}, \emph{International Journal of Impact Engineering} and \emph{European Journal of Mechanics A/Solids.}.}
+\cvlistitem{External advisor, Group of Structural Mechanics, University of A Coruña.}
+\cvlistitem{Opponent in PhD thesis committees at: The University of Edinburgh (2019). }
 
+\section{Other information}
+\cvlistitem{Driving license. Car owner.}
+\cvlistitem{Piano teacher and active professional concert pianist.}
 \end{document}
 
 
