--- a/v1/publications_en.bib
+++ b/v1/publications_en.bib
@@ -5,23 +5,32 @@
         journal={},
 }
 
-@article{tim,
-title = "{On the ballistic perforation resistance of additive manufactured {AlSi10Mg} aluminium plates [under review]}
-",
+
+@article{jordi,
+title = "{Pure Mode I Fracture Toughness Determination in Rocks Using a Pseudo-Compact Tension (pCT) Test Approach}",
+journal = "Rock Mechanics and Rock Engineering",
+year = "2020",
+author = "A. Muñoz-Ibáñez and J. Delgado-Martín and M. Costas and J. rabuñal-Dopico and J. Alvarellos-Iglesias and J. Canal-Vila",
+}
+
+@article{KRISTOFFERSEN2020103476,
+title = "On the ballistic perforation resistance of additive manufactured {AlSi10Mg} aluminium plates",
 journal = "International Journal of Impact Engineering",
-year = "2019",
-author = "M. Kristoffersen and M. Costas and T. Koenis and V. Brøtan and C. Paulsen and T. Børvik",
-
+volume = "137",
+pages = "103476",
+year = "2020",
+author = "M. Kristoffersen and M. Costas and T. Koenis and V. Brøtan and C.O. Paulsen and T. Børvik",
 }
 
-@article{3dprinted,
-title = "{Testing and simulation of additively manufactured {AlSi10Mg} boxes under quasi-static lateral compression [under review]
-}",
-journal = "Thin-Walled Structures",
-year = "2019",
-author = "M. Costas and D. Morin and M. de Lucio and M. Langseth",
-
+@article{COSTAS2020103966,
+title = "Testing and simulation of additively manufactured {AlSi10Mg} components under quasi-static loading",
+journal = "European Journal of Mechanics - A/Solids",
+volume = "81",
+pages = "103966",
+year = "2020",
+author = "M. Costas and D. Morin and M. [de Lucio] and M. Langseth",
 }
+
 @article{COSTAS2018,
 title = "A through-thickness damage regularisation scheme for shell elements subjected to severe bending and membrane deformations",
 journal = "Journal of the Mechanics and Physics of Solids",
