--- a/v1/CV-en.tex
+++ b/v1/CV-en.tex
@@ -88,8 +88,8 @@
 
 \pagebreak
 \section{Computation skills}
-\cvitem{FEM}{Structural analysis with Abaqus Standard and Explicit including user material subroutines, LS-DYNA, Ansys, SAP2000, Cosmos/M.}
-\cvitem{Optimization packages}{Experience in structural optimization with different optimization libraries. Experience with DAKOTA and LS-OPT optimization frameworks.}
+\cvitem{FEM}{Abaqus Standard and Explicit including user material subroutines, LS-DYNA, Ansys, SAP2000, Cosmos/M.}
+\cvitem{Optimization}{Experience in structural optimization: DAKOTA and LS-OPT.}
 \cvitem{CAD}{Autocad, Solidworks.}
 \cvitem{Programming}{Python, Fortran, Bash, \LaTeX.}
 
@@ -129,12 +129,12 @@
 \vspace{2mm}
 \cvlistitem{[\textbf{Toyota Motor Europe}] Study of the extrusion length produced during the assembly of flow-drill screws. Years 2019-2020.}
 \vspace{2mm}
-\cvlistitem{[\textbf{Hydro Extruded Solutions}] Study of a new high strength aluminium alloy and development and implementation of an anisotropic through-thickness ductile damage regularisation model for shells. Years 2019-2020.}
+\cvlistitem{[\textbf{Hydro Extruded Solutions}] Study of a new high-strength aluminium alloy and development and implementation of an anisotropic through-thickness ductile damage regularisation model for shells. Years 2019-2020.}
 \vspace{2mm}
 \cvlistitem{[\textbf{MX3D} and \textbf{Multiconsult}] Study of the material and structural properties of square hollow beams fabricated by wire arc additive manufacturing. Years 2020-2021.}
 \vspace{2mm}
-\cvlistitem{[\textbf{Hydro Extruded Solutions}, \textbf{Toyota Motor Europe}, \textbf{Audi}, \textbf{BMW}, \textbf{Honda}, \textbf{Airbus}, \textbf{Renault}, \textbf{Airbus}] Calibrations, workshops, seminars and stays related to the industrial implementation of the through-thickness damage regularisation model.}
-
+\cvlistitem{[\textbf{Hydro Extruded Solutions}, \textbf{Toyota Motor Europe}, \textbf{Audi}, \textbf{BMW}, \textbf{Honda}, \textbf{Airbus}, \textbf{Renault}] Calibrations, workshops, seminars and stays related to the industrial implementation of the through-thickness damage regularisation model.}
+\pagebreak
 \section{Patents in collaboration with industry}
 \cvlistitem{National Spanish patent no. ES 2-386-269-B1: Hybrid metal-composite system for crash energy absorption. Authors: Alberto Tielas, Isabel \'Alvarez, Raquel Ledo (Centro Tecnol\'oxico da Automoci\'on de Galicia, CTAG); Miguel Costas, Luis Esteban Romera (University of A Coru\~na, UDC). Granted on the 11th of July 2013.}
 
@@ -162,7 +162,7 @@
 \cvlistitem{Research stay from 1/10/2014 to 1/4/2015 (six months) at the Structural Impact Laboratory (NTNU, Norway) supervised by Prof. Magnus Langseth and Dr. David Morin.}
 
 \section{Scientific advisory}
-\cvlistitem{Reviewer in JCR journals \emph{International Journal of Mechanical Sciences}, \emph{Materials and Design}, \emph{Journal of Reinforced Plastics and Composites}, \emph{Engineering Optimization}, \emph{Computers and Structures}, \emph{Composites Part B}, \emph{Thin-Walled Structures}, \emph{International Journal of Impact Engineering} and \emph{European Journal of Mechanics A/Solids.}.}
+\cvlistitem{Reviewer in JCR journals \emph{Journal of the Mechanics and Physics of Solids}, \emph{Engineering Fracture Mechanics}, \emph{European Journal of Mechanics A/Solids}, \emph{International Journal of Impact Engineering}, \emph{International Journal of Mechanical Sciences}, \emph{Materials and Design}, \emph{Journal of Reinforced Plastics and Composites}, \emph{Engineering Optimization}, \emph{Computers and Structures}, \emph{Composites Part B} and \emph{Thin-Walled Structures}.}
 \cvlistitem{External advisor, Group of Structural Mechanics, University of A Coruña.}
 \cvlistitem{Opponent in PhD thesis committees at: The University of Edinburgh (2019). }
 
