--- a/v1/publications_en.bib
+++ b/v1/publications_en.bib
@@ -9,7 +9,7 @@
 title = "{Pure Mode I Fracture Toughness Determination in Rocks Using a Pseudo-Compact Tension (pCT) Test Approach}",
 journal = "Rock Mechanics and Rock Engineering",
 year = "2020",
-author = "A. Muñoz-Ibáñez and J. Delgado-Martín and M. Costas and J. rabuñal-Dopico and J. Alvarellos-Iglesias and J. Canal-Vila",
+author = "A. Muñoz-Ibáñez and J. Delgado-Martín and M. Costas and J. Rabuñal-Dopico and J. Alvarellos-Iglesias and J. Canal-Vila",
 }
 
 @article{KRISTOFFERSEN2020103476,
@@ -28,7 +28,7 @@ journal = "European Journal of Mechanics - A/Solids",
 volume = "81",
 pages = "103966",
 year = "2020",
-author = "M. Costas and D. Morin and M. [de Lucio] and M. Langseth",
+author = "M. Costas and D. Morin and M. de Lucio and M. Langseth",
 }
 
 @article{COSTAS2019103794,
@@ -157,7 +157,7 @@ isbn="978-3-662-53605-6",
   Year = {2019},
   }
 @conference{esiam2,
-  Author = {Kristoffersen, M. and Costas, M. and Oen Paulsen, C. and Koenis, T. and Brøtan, V. and Børvik, T.},
+  Author = {Kristoffersen, M. and Costas, M. and Paulsen, C.O. and Koenis, T. and Brøtan, V. and Børvik, T.},
   Booktitle = {European Conference on the Structural Integrity of Additively Manufactured Materials, Trondheim (Norway)},
   Document_Type = {Conference Paper},
   Title = {Experimental and numerical investigations of additively manufactured {AlSi10Mg} plates subjected to ballistic perforation},
