--- a/v1/CV-en.tex
+++ b/v1/CV-en.tex
@@ -14,7 +14,7 @@
 \moderncvstyle{classic}                        % las opciones de estilo son 'casual' (por omision),'classic', 'oldstyle' y 'banking'
 \moderncvcolor{green}                          % opciones de color 'blue' (por omision), 'orange', 'green', 'red', 'purple', 'grey' y 'black'
 %\renewcommand{\familydefault}{\sfdefault}    % para seleccionar la fuente por omision, use '\sfdefault' para la fuente sans serif, '\rmdefault' para la fuente roman, o cualquier nombre de fuente
-%\nopagenumbers{}                             % elimine el comentario para suprimir la numeracion automatica de las paginas para CVs mayores a una pagina
+% \nopagenumbers{}                             % elimine el comentario para suprimir la numeracion automatica de las paginas para CVs mayores a una pagina
 
 % codificacion de caracteres
 %\usepackage[utf8]{inputenc}                  % reemplace con su codificacion
@@ -143,8 +143,8 @@
 \cvlistitem{[Regional project] GRC2013-056. Group of Competitive Reference. Regional Counseling of Culture, Education and Universities. Years 2013-2016. Budget: 259000 \texteuro.}
 
 \section{RD fundraising -- awarded projects}
+\cvlistitem{[National project] PID2019-108307RB-I00. OPTIFUSE. Reliability-based crashworthiness and damage tolerant optimization of new generation fuselage structures. Spanish Ministry of Science and Innovation. Year 2020. Budget: 15000 \texteuro  + PhD contract.}
 \cvlistitem{[National project] DPI2016-76934-R. OPTISAFE. Probabilistic optimization of intact and damaged aeronautical structures under dynamic and impact loading. Spanish Ministry of Economy and Competitiveness. Year 2016. Budget: 111600 \texteuro.}
-
 \nocite{*}
 \bibliographystyle{unsrt}
 \bibliography{publications_en}                    % 'publications' es el nombre del archivo BibTeX
