--- a/v1/publications_en.bib
+++ b/v1/publications_en.bib
@@ -8,6 +8,8 @@
 @article{jordi,
 title = "{Pure Mode I Fracture Toughness Determination in Rocks Using a Pseudo-Compact Tension (pCT) Test Approach}",
 journal = "Rock Mechanics and Rock Engineering",
+volume = "53",
+pages = "3267-3285",
 year = "2020",
 author = "A. Muñoz-Ibáñez and J. Delgado-Martín and M. Costas and J. Rabuñal-Dopico and J. Alvarellos-Iglesias and J. Canal-Vila",
 }
