--- a/v1/publications_en.bib
+++ b/v1/publications_en.bib
@@ -5,6 +5,38 @@
         journal={},
 }
 
+@article{maisie,
+title = "{Ballistic impact resistance of additive manufactured high-strength maraging steel: an experimental study}",
+journal = "Journal of Materials Processing Technology",
+year = "2021 [to be submitted to Materials and Design]",
+author = "M. Costas and M. Edwards-Mowforth and M. Kristoffersen and F. Teixeira-Dias and V. Brøtan and C.O. Paulsen and T. Børvik",
+}
+
+@article{fds,
+title = "{On the effect of pilot holes on the mechanical behaviour of flow-drill screw joints. Experimental tests and mesoscale numerical simulations}",
+journal = "Journal of Materials Processing Technology",
+year = "2021 [revised manuscript submitted, expecting acceptance]",
+author = "M. Costas and D. Morin and J.K. Sønstabø and M. Langseth",
+}
+
+@article{master,
+title = "{Experimental and numerical study on the static and dynamic behaviour of notched square hollow sections made of three different types of S355 steel}",
+journal = "Journal of Constructional Steel Research",
+year = "2021 [revised manuscript submitted, expecting acceptance]",
+author = "H. Johannessen and O.H. Johannessen and M. Costas and J.K. Sønstabø and A.H. CLausen",
+}
+
+@Article{app10238510,
+AUTHOR = {Paz, J. and Costas, M. and Delgado, J. and Romera, L. and Díaz, J.},
+TITLE = {Energy Absorption of Aluminium Extrusions Filled with Cellular Materials Under Axial Crushing: Study of the Interaction Effect},
+JOURNAL = {Applied Sciences},
+VOLUME = {10},
+YEAR = {2020},
+NUMBER = {23},
+ARTICLE-NUMBER = {8510},
+}
+
+
 @article{jordi,
 title = "{Pure Mode I Fracture Toughness Determination in Rocks Using a Pseudo-Compact Tension (pCT) Test Approach}",
 journal = "Rock Mechanics and Rock Engineering",
