--- a/v1/CV-en.tex
+++ b/v1/CV-en.tex
@@ -143,7 +143,7 @@
 \cvlistitem{[Regional project] GRC2013-056. Group of Competitive Reference. Regional Counseling of Culture, Education and Universities. Years 2013-2016. Budget: 259000 \texteuro.}
 
 \section{RD fundraising -- awarded projects}
-\cvlistitem{[National project] PID2019-108307RB-I00. OPTIFUSE. Reliability-based crashworthiness and damage tolerant optimization of new generation fuselage structures. Spanish Ministry of Science and Innovation. Year 2020. Budget: 15000 \texteuro  + PhD contract.}
+\cvlistitem{[National project] PID2019-108307RB-I00. OPTIFUSE. Reliability-based crashworthiness and damage tolerant optimization of new generation fuselage structures. Spanish Ministry of Science and Innovation. Year 2020. Budget: 154000 \texteuro  + PhD contract.}
 \cvlistitem{[National project] DPI2016-76934-R. OPTISAFE. Probabilistic optimization of intact and damaged aeronautical structures under dynamic and impact loading. Spanish Ministry of Economy and Competitiveness. Year 2016. Budget: 111600 \texteuro.}
 \nocite{*}
 \bibliographystyle{unsrt}
@@ -162,7 +162,7 @@
 \cvlistitem{Research stay from 1/10/2014 to 1/4/2015 (six months) at the Structural Impact Laboratory (NTNU, Norway) supervised by Prof. Magnus Langseth and Dr. David Morin.}
 
 \section{Scientific advisory}
-\cvlistitem{Reviewer in JCR journals \emph{Journal of the Mechanics and Physics of Solids}, \emph{Engineering Fracture Mechanics}, \emph{European Journal of Mechanics A/Solids}, \emph{International Journal of Impact Engineering}, \emph{International Journal of Mechanical Sciences}, \emph{Materials and Design}, \emph{Journal of Reinforced Plastics and Composites}, \emph{Engineering Optimization}, \emph{Computers and Structures}, \emph{Composites Part B} and \emph{Thin-Walled Structures}.}
+\cvlistitem{Reviewer in JCR journals \emph{Journal of the Mechanics and Physics of Solids}, \emph{Engineering Fracture Mechanics}, \emph{European Journal of Mechanics A/Solids}, \emph{International Journal of Impact Engineering}, \emph{International Journal of Mechanical Sciences}, \emph{Materials and Design}, \emph{Journal of Reinforced Plastics and Composites}, \emph{Engineering Optimization}, \emph{Computers and Structures}, \emph{Composites Part B}, \emph{Journal of Aerospace Engineering}, and \emph{Thin-Walled Structures}.}
 \cvlistitem{External advisor, Group of Structural Mechanics, University of A Coruña.}
 \cvlistitem{Opponent in PhD thesis committees at: The University of Edinburgh (2019). }
 
