--- a/v1/publications_en.bib
+++ b/v1/publications_en.bib
@@ -8,22 +8,26 @@
 @article{maisie,
 title = "{Ballistic impact resistance of additive manufactured high-strength maraging steel: an experimental study}",
 journal = "Journal of Materials Processing Technology",
-year = "2021 [to be submitted to Materials and Design]",
+year = "2021 [submitted to Materials and Design]",
 author = "M. Costas and M. Edwards-Mowforth and M. Kristoffersen and F. Teixeira-Dias and V. Brøtan and C.O. Paulsen and T. Børvik",
 }
 
-@article{fds,
-title = "{On the effect of pilot holes on the mechanical behaviour of flow-drill screw joints. Experimental tests and mesoscale numerical simulations}",
-journal = "Journal of Materials Processing Technology",
-year = "2021 [revised manuscript submitted, expecting acceptance]",
-author = "M. Costas and D. Morin and J.K. Sønstabø and M. Langseth",
+@article{COSTAS2021117133,
+title = {On the effect of pilot holes on the mechanical behaviour of flow-drill screw joints. Experimental tests and mesoscale numerical simulations},
+journal = {Journal of Materials Processing Technology},
+volume = {294},
+pages = {117133},
+year = {2021},
+author = {Miguel Costas and David Morin and Johan Kolstø Sønstabø and Magnus Langseth},
 }
 
-@article{master,
-title = "{Experimental and numerical study on the static and dynamic behaviour of notched square hollow sections made of three different types of S355 steel}",
-journal = "Journal of Constructional Steel Research",
-year = "2021 [revised manuscript submitted, expecting acceptance]",
-author = "H. Johannessen and O.H. Johannessen and M. Costas and J.K. Sønstabø and A.H. CLausen",
+@article{JOHANNESSEN2021106673,
+title = {Experimental and numerical study of notched {SHS} made of different {S355} steels},
+journal = {Journal of Constructional Steel Research},
+volume = {182},
+pages = {106673},
+year = {2021},
+author = {Håkon Johannessen and Oddvar Hestetræet Johannessen and Miguel Costas and Arild Holm Clausen and Johan Kolstø Sønstabø},
 }
 
 @Article{app10238510,
