--- a/v1/CV-en.tex
+++ b/v1/CV-en.tex
@@ -63,8 +63,8 @@
 \cventry{2016}{\emph{Cum laude} PhD.}{University of A Coru\~na}{}{}{Awarded to PhD. theses with outstanding contributions, agreed by the committee by secret individual votes.} 
 
 \section{Work history}
-
-\cventry{2019--Present}{Researcher}{Centre for Advanced Structural Analysis (CASA), NTNU (Trondheim, Norway)}{}{}{}
+\cventry{2021--Present}{Associate professor}{Department of Structural Engineering, NTNU (Trondheim, Norway)}{}{}{}
+\cventry{2019--2021}{Researcher}{Centre for Advanced Structural Analysis (CASA), NTNU (Trondheim, Norway)}{}{}{}
 \cventry{2017--2019}{Postdoctoral researcher}{Centre for Advanced Structural Analysis (CASA), NTNU (Trondheim, Norway)}{}{}{}
 \cventry{2016}{Postdoctoral researcher}{Structural Mechanics group, University of A Coru\~na}{}{}{}
 \cventry{2011--2015}{RD engineer and PhD candidate}{Structural Mechanics group, University of A Coru\~na}{}{}{}
@@ -108,7 +108,7 @@
 \vspace{2mm}
 \cvlistitem{[\textbf{CTAG}, regional Galician project] 09DPI-011118PR INCITE 2009. Optimum design of automobile structures and components with metallic and composite materials. Regional Counseling of Economy and Industry. Years 2009-2012. Budget: 45000 \texteuro.}
 \vspace{2mm}
-\cvlistitem{[\textbf{CTAG}, regional Galician project] 10DPI025CT. Hybrid-Body: structural optimization of a hybrid sistem for frontal impact energy absorption with experimental and numerical validation. Regional Counseling of Economy and Industry. Years 2010-2012. Budget: 46000 \texteuro.}
+\cvlistitem{[\textbf{CTAG}, regional Galician project] 10DPI025CT. Hybrid-Body: structural optimization of a hybrid system for frontal impact energy absorption with experimental and numerical validation. Regional Counseling of Economy and Industry. Years 2010-2012. Budget: 46000 \texteuro.}
 \vspace{2mm}
 \cvlistitem{[\textbf{Puentes y calzadas}] Seismic design in linear and nonlinear regimes of the new bridge over the river Chiche, in Ecuador. Ref. 443. Year 2013. Budget: 44504.77 \texteuro.}
 \vspace{2mm}
@@ -125,13 +125,15 @@
 \vspace{2mm}
 \cvlistitem{[\textbf{Toyota Motor Europe}] Study of hybrid joints with adhesive and flow drill screws. Years 2018-2020.}
 \vspace{2mm}
-\cvlistitem{[\textbf{Hydro Extruded Solutions}] Study of friction stir welds in AA6082-T6 extruded aluminium panels. Years 2019-2020.}
+\cvlistitem{[\textbf{Hydro Extruded Solutions}] Study of friction stir welds in AA6082-T6 extruded aluminium panels. Years 2019-2021.}
 \vspace{2mm}
 \cvlistitem{[\textbf{Toyota Motor Europe}] Study of the extrusion length produced during the assembly of flow-drill screws. Years 2019-2020.}
 \vspace{2mm}
 \cvlistitem{[\textbf{Hydro Extruded Solutions}] Study of a new high-strength aluminium alloy and development and implementation of an anisotropic through-thickness ductile damage regularisation model for shells. Years 2019-2020.}
 \vspace{2mm}
 \cvlistitem{[\textbf{MX3D} and \textbf{Multiconsult}] Study of the material and structural properties of square hollow beams fabricated by wire arc additive manufacturing. Years 2020-2021.}
+\vspace{2mm}
+\cvlistitem{[\textbf{Hydro} and \textbf{Benteler}] IPN project EXPECT. Years 2021-2024.}
 \vspace{2mm}
 \cvlistitem{[\textbf{Hydro Extruded Solutions}, \textbf{Toyota Motor Europe}, \textbf{Audi}, \textbf{BMW}, \textbf{Honda}, \textbf{Airbus}, \textbf{Renault}] Calibrations, workshops, seminars and stays related to the industrial implementation of the through-thickness damage regularisation model.}
 \pagebreak
