--- a/v1/publications_en.bib
+++ b/v1/publications_en.bib
@@ -7,8 +7,8 @@
 
 @article{maisie,
 title = "{Ballistic impact resistance of additive manufactured high-strength maraging steel: an experimental study}",
-journal = "Journal of Materials Processing Technology",
-year = "2021 [submitted to Materials and Design]",
+journal = "International Journal of Protective Structures",
+year = "2021",
 author = "M. Costas and M. Edwards-Mowforth and M. Kristoffersen and F. Teixeira-Dias and V. Brøtan and C.O. Paulsen and T. Børvik",
 }
 
@@ -187,6 +187,13 @@ isbn="978-3-662-53605-6",
         journal={},
 
 }
+@conference{lsdyna21,
+  Author = {Andr\'e, V. and Morin, D. and Costas, M. and Langseth, M.},
+  Booktitle = {13th LS-DYNA European Conference, Ulm (Germany)},
+  Document_Type = {Conference Paper},
+  Title = {Neural Network Representationof Mechanical Fasteners inLarge-Scale Analyses},
+  Year = {2021},
+  }
 @conference{esiam1,
   Author = {Costas, M. and Morin, D. and Langseth, M.},
   Booktitle = {European Conference on the Structural Integrity of Additively Manufactured Materials, Trondheim (Norway)},
