anhadidas conferencias chairman y organizador

--- a/v1/CV-en.tex
+++ b/v1/CV-en.tex
@@ -164,6 +164,7 @@
 \cvlistitem{Research stay from 1/10/2014 to 1/4/2015 (six months) at the Structural Impact Laboratory (NTNU, Norway) supervised by Prof. Magnus Langseth and Dr. David Morin.}
 
 \section{Scientific advisory}
+\cvlistitem{Collaboration in international conferences: Chairman in ECCOMAS 2022, member of the organizing committee in ICILSM 2022.}
 \cvlistitem{Reviewer in JCR journals \emph{Journal of the Mechanics and Physics of Solids}, \emph{Engineering Fracture Mechanics}, \emph{European Journal of Mechanics A/Solids}, \emph{International Journal of Impact Engineering}, \emph{International Journal of Mechanical Sciences}, \emph{Materials and Design}, \emph{Journal of Reinforced Plastics and Composites}, \emph{Engineering Optimization}, \emph{Computers and Structures}, \emph{Composites Part B}, \emph{Journal of Aerospace Engineering}, and \emph{Thin-Walled Structures}.}
 \cvlistitem{External advisor, Group of Structural Mechanics, University of A Coruña.}
 \cvlistitem{Opponent in PhD thesis committees at: The University of Edinburgh (2019). }
